--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,11 @@
         android:padding="5dip"
         android:text="获取帖子" />
 
+    <Button
+        android:id="@+id/get_home_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dip"
+        android:text="首页同时获得多个接口" />
+
 </LinearLayout>
