--- a/app/src/main/res/layout/activity_github_api.xml
+++ b/app/src/main/res/layout/activity_github_api.xml
@@ -1,16 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.sunflower.rxandroiddemo.GithubAPIActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <Button
+        android:id="@+id/test_login_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="5dip"
+        android:text="登录Github" />
 
-</RelativeLayout>
+
+    <Button
+        android:id="@+id/test_update_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dip"
+        android:text="更新个人资料" />
+
+</LinearLayout>
