--- a/app/src/main/res/layout/activity_github_api.xml
+++ b/app/src/main/res/layout/activity_github_api.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sunflower.rxandroiddemo.GithubAPIActivity">
+    tools:context="com.sunflower.rxandroiddemo.activity.GithubAPIActivity">
 
     <Button
         android:id="@+id/test_login_btn"
