--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,6 @@
         android:text="测试Github API" />
 
     <Button
-        android:id="@+id/get_sms_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dip"
-        android:text="获取验证码" />
-
-    <Button
         android:id="@+id/get_article_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,13 +61,14 @@
 
 
     <Button
+        android:id="@+id/notification_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dip"
-        android:paddingTop="5dip"
-        android:paddingRight="5dip"
         android:paddingBottom="5dip"
-        android:text="取消收藏帖子" />
+        android:paddingLeft="5dip"
+        android:paddingRight="5dip"
+        android:paddingTop="5dip"
+        android:text="获取通知" />
 
 
 </LinearLayout>
